--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<script
-  src="https://code.jquery.com/jquery-3.7.1.min.js"
-  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-  crossorigin="anonymous"></script>
-<style type="text/css">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>同城约拍</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  
+  <style type="text/css">
     *{
         margin:0; 
         padding:0;
@@ -32,11 +34,18 @@
         padding:0 5%;
     }
 </style>
+</head>
+
+<body>
+
 <div class="weixin-tip">
     <p>
         <img src="live_weixin.png" alt="微信打开"/>
     </p>
 </div>
+</body>
+
+
 <script type="text/javascript">
     $(window).on("load",function(){
         var winHeight = $(window).height();
