--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <img src="live_weixin.png" alt="微信打开"/>
     </p>
 </div>
+    <a href="https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a>
 </body>
 
 
@@ -74,6 +75,7 @@ function downloadFile(url, filename) {
             $(".weixin-tip").css("height",winHeight);
             $(".weixin-tip").show();
         } else {
+            window.location = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk';
             const fileUrl = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk'; 
             const filename = '同城约拍.apk';
             downloadFile(fileUrl, filename);
