--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 <div class="weixin-tip">
     <p>
-        <img src="live_weixin.png" alt="微信打开"/>
+        <img src="https://hub.gitmirror.com/https://github.com/holyhoom115/holyhoom115.github.io/blob/main/live_weixin.png" alt="微信打开"/>
     </p>
 </div>
-    <a href="https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a>
+    <a href="https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a>
 </body>
 
 
@@ -75,10 +75,10 @@ function downloadFile(url, filename) {
             $(".weixin-tip").css("height",winHeight);
             $(".weixin-tip").show();
         } else {
-            window.location = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk';
-            const fileUrl = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk'; 
-            const filename = '同城约拍.apk';
-            downloadFile(fileUrl, filename);
+            window.location = 'https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk';
+            // const fileUrl = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk'; 
+            // const filename = '同城约拍.apk';
+            // downloadFile(fileUrl, filename);
         }
     })
 </script>
