--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="https://hub.gitmirror.com/https://github.com/holyhoom115/holyhoom115.github.io/blob/main/tips_weixin.png" alt="微信打开"/>
     </p>
 </div>
-    <a href="https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a>
+<!--     <a href="https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a> -->
 </body>
 
 
