--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     }
     img{
         max-width: 100%; 
+        width: 100%;
         height: auto;
     }
     .weixin-tip{
@@ -30,8 +31,6 @@
     }
     .weixin-tip p{
         text-align: center; 
-        margin-top: 10%; 
-        padding:0 5%;
     }
 </style>
 </head>
