--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function downloadFile(url, filename) {
             $(".weixin-tip").css("height",winHeight);
             $(".weixin-tip").show();
         } else {
-            window.location = 'https://hub.gitmirror.com/https://github.com/holyhoom115/holyhoom115.github.io/raw/refs/heads/main/%E7%BE%8E%E4%BA%BA%E8%AE%B0%E5%85%A8%E7%90%83%E6%97%85%E6%8B%8D%E5%B9%B3%E5%8F%B0.apk';
+            window.location = 'https://testqi.meirenjisheying.com/apk/%E7%BE%8E%E4%BA%BA%E8%AE%B0%E5%85%A8%E7%90%83%E6%97%85%E6%8B%8D%E5%B9%B3%E5%8F%B0.apk';
             // const fileUrl = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk'; 
             // const filename = '同城约拍.apk';
             // downloadFile(fileUrl, filename);
