--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="weixin-tip">
     <p>
-        <img src="https://hub.gitmirror.com/https://github.com/holyhoom115/holyhoom115.github.io/blob/main/wtips.png" alt="微信打开"/>
+        <img src="https://testqi.meirenjisheying.com/apk/wtips.png" alt="微信打开"/>
     </p>
 </div>
 <!--     <a href="https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a> -->
