--- a/index.html
+++ b/index.html
@@ -2,82 +2,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>美人记全球旅拍</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  
-  <style type="text/css">
-    *{
-        margin:0; 
-        padding:0;
-    }
-    a{
-        text-decoration: none;
-    }
-    img{
-        max-width: 100%; 
-        width: 100%;
-        height: auto;
-    }
-    .weixin-tip{
-        display: none; 
-        position: fixed; 
-        left:0; 
-        top:0; 
-        bottom:0; 
-        background: rgba(0,0,0,0.8); 
-        filter:alpha(opacity=80);  
-        height: 100%; 
-        width: 100%; 
-        z-index: 100;
-    }
-    .weixin-tip p{
-        text-align: center; 
-    }
-</style>
+    <script type="text/javascript">
+     window.location = 'http://download.meirenjisheying.com/mobile/android/apk/';
+    </script>
 </head>
 
 <body>
 
-<div class="weixin-tip">
-    <p>
-        <img src="https://testqi.meirenjisheying.com/apk/wtips.png" alt="微信打开"/>
-    </p>
-</div>
-<!--     <a href="https://hub.gitmirror.com/https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk" download="" > 下载 </a> -->
 </body>
 
-
 <script type="text/javascript">
-
-function downloadFile(url, filename) {
- 
-  const a = document.createElement('a');
-  a.style.display = 'none';
-  a.href = url;
-  a.download = filename;
-  document.body.appendChild(a);
-  a.click();
-  document.body.removeChild(a);
-}
-
-    $(window).on("load",function(){
-        var winHeight = $(window).height();
-        function is_weixin() {
-            var ua = navigator.userAgent.toLowerCase();
-            if (ua.match(/MicroMessenger/i) == "micromessenger") {
-                return true;
-            } else {
-                return false;
-            }
-        }
-        var isWeixin = is_weixin();
-        if(isWeixin){
-            $(".weixin-tip").css("height",winHeight);
-            $(".weixin-tip").show();
-        } else {
-            window.location = 'https://testqi.meirenjisheying.com/apk/%E7%BE%8E%E4%BA%BA%E8%AE%B0%E5%85%A8%E7%90%83%E6%97%85%E6%8B%8D%E5%B9%B3%E5%8F%B0.apk';
-            // const fileUrl = 'https://github.com/holyhoom115/np/releases/download/test/meirenji-v1.0.1.apk'; 
-            // const filename = '同城约拍.apk';
-            // downloadFile(fileUrl, filename);
-        }
-    })
+ window.location = 'http://download.meirenjisheying.com/mobile/android/apk/';
 </script>
